--- a/package.yaml
+++ b/package.yaml
@@ -1,7 +1,7 @@
 name:                algorithms
 version:             0.0.1.0
 github:              "dvoraka/algorithms"
-license:             GPLv3
+license:             GPL-3
 author:              "dvoraka"
 maintainer:          "example@example.com"
 copyright:           "2020 dvoraka"
